//////////////////
/// Properties ///
//////////////////

version = '0.1-SNAPSHOT'

/////////////////
/// Variables ///
/////////////////

///////////////////
/// Build Setup ///
/////////////////// 

//defaultTasks 'intro'

apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'sonar'

task wrapper(type: Wrapper) {
    gradleVersion = '2.0'
}

compileJava {
	sourceCompatibility = 1.8
}

test {
	exclude '**/*Tests.class'
	jvmArgs '-Xms256m', '-Xmx512m', '-XX:MaxPermSize=128m'
	forkEvery=1 // how many test classes should be run before creating a new JVM instance
//	maxParallelForks = 5 // how many test classes should be run at the same time
}

// this needs to be cleaned up now that the project is updated to the latest version of Gradle (2.0)
sonar {
	project {
		name = 'Study'
		version = version
	}
	server {
		url = 'http://localhost:9000'
	}
	database {
		url = 'jdbc:oracle:thin:sonar/sonar@localhost:1521:XE'
		driverClassName = 'oracle.jdbc.OracleDriver'
	}
}

dependencies {
	compile 'org.codehaus.groovy:groovy-all:2.3.2',
          'com.google.guava:guava:18.0',
          'org.apache.httpcomponents:httpclient:4.2.1',
          'org.pojomatic:pojomatic:2.0.1',
		      'org.apache.httpcomponents:httpcore:4.2.1',
		      'com.google.inject:guice:3.0',
		      'commons-io:commons-io:2.4',
		      'org.jsoup:jsoup:1.6.3',
		      'org.hamcrest:hamcrest-all:1.3',
          'org.hibernate:hibernate-core:4.1.10.Final',
          'org.hibernate:hibernate-entitymanager:4.1.10.Final',
          'com.typesafe.akka:akka-actor_2.11:2.3.6',
//		    'com.c2.fit:fit:1.1',
		      files("${projectDir}/src/main/resources/lib/ojdbc6.jar")
	testCompile 'org.mockito:mockito-all:1.10.8',
                    'org.apache.camel:camel-core:2.10.0',
	      	    'org.apache.camel:camel-jms:2.10.0',
	    	      'org.apache.camel:camel-sql:2.10.0',
      		    'org.apache.activemq:activemq-core:5.6.0',
		          'org.springframework:spring-jdbc:3.1.2.RELEASE',
		          'org.easytesting:fest-swing:1.2.1',
		          'com.h2database:h2:1.3.170'
	testCompile ('org.jmock:jmock-junit4:2.5.1') { // don't want the hamcrest version this pulls in transitively
				        exclude group: 'org.hamcrest' // exclude by whole group
				      }
	testCompile ('junit:junit:4.10') { // don't want the hamcrest version this pulls in transitively
			          exclude group: 'org.hamcrest' // exclude by whole group
				      }
	testCompile ('org.jmock:jmock:2.5.1') { // don't want the hamcrest version this pulls in transitively
				        exclude group: 'org.hamcrest' // exclude by whole group
				      }
}

repositories {
	mavenCentral()
}

task jenkinsTest {
	inputs.files test.outputs.files
	doLast{
		def timestamp = System.currentTimeMillis()
		test.testResultsDir.eachFile { it.lastModified = timestamp }
	}
}
build.dependsOn(jenkinsTest)

//////////////////////////////////////////////////
/// Some sandbox stuff to see how Gradle works ///
//////////////////////////////////////////////////

task intro << {
	println "I'm Gradle."
}

task buzzoff(dependsOn:intro) << { // here's another way to depend on another task: buzzoff.dependsOn intro
	println 'Get out of here!'
}

task taskTest << {
	println 'Original added line'
}

taskTest << {
	println '<< added action performed'
}

taskTest {
	task ->
	
	doLast
	{
		println 'doLast added action performed'
	}
	doFirst
	{
		println 'doFirst added action performed'
	}
}

taskTest { // this configures the task, so it seems to be similar to constructor code
	task ->
	
	task.onlyIf {
		def prop = System.getProperty("shouldRunTaskTest")
		return prop && prop == 'true'
	}
}

task upper << {
	String someString = 'mY_nAmE'
	println "Original: " + someString
	println "Upper case: " + someString.toUpperCase()
}

task hello << {
	println 'Hello world!'
}
